# PiMax

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dependencies.cmake  LICENSE  Maximizer.jucer  README.md  create-install.sh  install.sh  validate.sh
.github/workflows/: Deploy.yml  ci.yml
Source/: DownloadManager.h  OnlineActivation.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  UI.cpp  UI.h
Source/Presets/: PresetComp.h  PresetManager.h
Source/Presets/Factory Presets/: Broken Gear.aap  Default.aap  Drum Expander.aap  Guitar Stompbox.aap
Source/Processors/: CMakeLists.txt  LRFilter.h  LinearFilter.h  MaximPizer.h  MultiBand Processor.h  MultiBandProcessor.h  StereoWidener.h  Waveshapers.h
Source/UI/: CMakeLists.txt  LookAndFeel.h  Menu.h  ResponseCurveComponent.cpp  ResponseCurveComponent.h  Splash.h  UI.cpp  UI.h  WaveshaperComponent.cpp  WaveshaperComponent.h
Source/ff_meters/: ff_meters.h
Source/ff_meters-master/LevelMeter/: LevelMeter.cpp  LevelMeter.h
Source/ff_meters-master/LookAndFeel/: LevelMeterLookAndFeelMethods.h
installer/: PiMax.pkgproj  linux-installer.sh  linux-readme.md  mac-installer.sh  win-installer.sh
installer/win-extra/: install_script.iss  install_script32.iss
manual/: PiMax.md  PiMax.typ
src/: Activation.hpp  OnlineActivation.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/Presets/: CMakeLists.txt  PresetComp.h  PresetManager.h
src/Presets/Factory Presets/: Bass Fattener.aap  Bass Quack.aap  Drum Crusher.aap  Kick Enhancer.aap  Loudness Curve.aap  Snare Enhancer.aap  Subtle Warmth.aap  Vocal Polisher.aap
src/Processors/: LRFilter.h  LinearFilter.h  LinearFilter.hpp  MaximPizer.h  MultiBandProcessor.h  StereoWidener.h  Waveshapers.h
src/UI/: LookAndFeel.h  Menu.h  ResponseCurveComponent.cpp  ResponseCurveComponent.h  Splash.h  UI.cpp  UI.h  WaveshaperComponent.cpp
